--- a/notebooks/calibration_notes.ipynb
+++ b/notebooks/calibration_notes.ipynb
@@ -18,13 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "3b315984",
+   "execution_count": null,
+   "id": "0e5c69fb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas "
    ]
   },
   {
@@ -38,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4cb91e96",
    "metadata": {},
    "outputs": [],
@@ -87,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ad169578",
    "metadata": {},
    "outputs": [],
@@ -132,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e9434120",
    "metadata": {},
    "outputs": [],
@@ -150,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ea502892",
    "metadata": {},
    "outputs": [],
